# OpenMP

./: .gitignore  CMakeLists.txt  b  t  todo
Mas/Matrix/: Matrix.h  MatrixGen.cpp  _matrixI.h  _matrixIO.h  _matrixMulI.h
Mas/Utils/: StringBuilder.cpp  StringBuilder.h  UtilsIO.cpp  UtilsIO.h  _stringBuilderI.h
Matrix/: Matrix.h  _matrixI.h  _matrixMulI.h
Tests/: CMakeLists.txt  CtorThrow.cpp  MulMatrix1.cpp  MulMatrix2.cpp  MulMatrix3.cpp  MulMatrixPar.cpp  MulMatrixSpeedPar.cpp  MulMatrixSpeedPar.log1  MulMatrixSpeedPar.log2  MulMatrixSpeedPar.log3  MulMatrixSpeedPar.log4  MulMatrixSpeedSeq.cpp  ReadMatrix.cpp  ReadMatrix2.cpp  TestMul.cpp  WriteMatrix.cpp
Tests/Matrices/: A1.txt  B1.txt  C1.txt  m1.txt
